# exfor-parserpy

./: .pre-commit-config.yaml  README.md  exfor_parser.py  exfor_primitives.py  first_attempt.py  pyproject.toml  second_attempt.py
examples/: example-001-basic-read-write.py  example-002-transformer-demo.py
exfor_parser/: exfor_parser.py  exfor_primitives.py  fortran_utils.py
exfor_parser/trafos/: auxtools.py  unitfy.py
exfor_parser/utils/: __init__.py  arithmetic_expr_parsing.py  convenience.py  custom_iterators.py
exfor_parserpy/: __init__.py  exfor_diff.py  exfor_parser.py  exfor_primitives.py
exfor_parserpy/trafos/: __init__.py  depointerfy.py  detextify.py  extract_reaction.py  reactify.py  substituty.py  tablify.py  uncommonfy.py  unitfy.py
exfor_parserpy/utils/: __init__.py  arithmetic_expr_parsing.py  arithmetic_expr_parsing_new.py  comparison_utils.py  convenience.py  custom_iterators.py  fortran_utils.py
tests/: conftest.py  test_bijection.py  test_exfor_parser.py  test_expression_parsing.py  test_reaction_parsing.py  test_transformers.py
