[tool.poetry]
name = "exfor-parserpy"
version = "0.1.0"
description = "This parser reads the EXFOR format into a nested dictionary structure in Python."
authors = ["Georg Schnabel <g.schnabel@iaea.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "~1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
