[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "exfor-parserpy"
version = "0.1.0"
description = "This parser reads the EXFOR format into a nested dictionary structure in Python."
license = "MIT"
keywords = []
readme = "README.md"
authors = [
  { name = "Georg Schnabel", email = "g.schnabel@iaea.org" },
]
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.22.0",
  "pandas>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=4.0",
  "pre-commit>=1.10.0",
]
